fix(map controls): move map controls with overlay so they are always visible (#1131)
* fix(map controls): move map controls with overlay so they are always visible

* chore: clean

* chore: update tests

* chore: add cypress test for MapControls

* chore: refactor ResizeObserver stuff

* chore: fix MapControls on resize

* chore(release): 1.25.9-beta.0

* chore: clean cypress test

* chore: extract Geolocation, MenuToggler and FitExtent as standalone components

--- a/src/components/TrafimageMaps/TrafimageMaps.scss
+++ b/src/components/TrafimageMaps/TrafimageMaps.scss
@@ -175,17 +175,6 @@
     cursor: pointer;
   }
 
-  &.tm-h-m,
-  &.tm-h-s,
-  &.tm-h-xs {
-    .wkp-geolocation,
-    .wkp-fit-extent,
-    .rs-zoom-in,
-    .rs-zoom-out {
-      margin: 10px 0;
-    }
-  }
-
   &.tm-h-s,
   &.tm-h-xs {
     .rs-zoomslider-wrapper {
